@@ -21,4 +21,7 @@
   Changelog
   ---------
 
- The following list shows the bug fixes and enhancements included in this release:
+ Apache Karaf Cellar 3.0.0 is a major new release of Cellar designed to work with Karaf 3.0.x versions.
+ It includes a lot of new features and bug fixes:
+
+
